--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@svgr/webpack": "^6.5.1",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "next": "13.0.0",
